--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>ROCK PAPER SCISSORS SHOOT</h1>
+    <p>First to 5 wins!</p>
     <div class="buttons">
         <button id="rock">rock</button>
         <button id="paper">paper</button>
